# ecosystem-messaging-spec

./: .gitignore  LICENSE  NOTICE  README.md
docs/: UNIVERSAL_MESSAGE_SPEC.md
go/: README.md  applyevent.go  approval_test.go  events.go  go.mod  json.go  memorylayer.go  memorylayer_test.go  progress_test.go  schema.go  spec_test.go  todo_test.go  tools.go
python/: README.md  pyproject.toml
python/src/scitrera_messaging_spec/: __init__.py  adapters.py  events.py  langchain.py  memorylayer.py  schema.py  streaming.py  tools.py
python/tests/: test_approval.py  test_control.py  test_feedback.py  test_json_schema.py  test_langchain.py  test_memorylayer.py  test_messaging.py  test_progress.py  test_streaming.py  test_subagent.py  test_todo.py  test_tools.py
typescript/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
typescript/src/: applyEvent.ts  events.ts  globals.d.ts  index.ts  memorylayer.ts  schema.ts  tools.ts
typescript/test/: applyEvent.test.ts  approval.test.ts  control.test.ts  feedback.test.ts  memorylayer.test.ts  progress.test.ts  subagent.test.ts  todo.test.ts  tools.test.ts
