[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "scitrera-messaging-spec"
version = "1.2.0"
description = "Universal ChatMessage & ToolCall schema for the Scitrera AI platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Scitrera LLC" }]
keywords = ["chat", "llm", "schema", "messaging", "spec"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
test = ["pytest>=8"]
langchain = ["langchain-core>=0.3"]

[project.urls]
Homepage = "https://github.com/scitrera/ecosystem-messaging-spec"
Repository = "https://github.com/scitrera/ecosystem-messaging-spec"
Issues = "https://github.com/scitrera/ecosystem-messaging-spec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitrera_messaging_spec"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
